# my-mcp

./: .gitignore  Dockerfile  Makefile  README.md  build-docker-image.sh  config.json  create_mcp_server  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
docs/: README.md  build-options.md  docker-usage.md  prompts.md
my_mcp/: server.py
my_mcp/cache/: local_cache.py
my_mcp/config/: config_manager.py
scripts/: sync-requirements.py
tests/: test_get_fibonacci_sequence.py
